# Wireless-Sensor-Management-and-Tracking

./: Database to GUI.lnk  README.md  Sensor to Database.lnk
Arduino/arduino_upload/: arduino_upload.ino
Database/: .$Database Diagram.drawio.bkp  Database Diagram.drawio  efes_sensor_data.db
Database-GUI/: CMakeLists.txt  efes_sensor_gui.h  ez_cpp.h  ez_imgui.h  ez_serialport.h  ez_sqlite.h  ez_time.h  main.cpp
Sensor-Database/: CMakeLists.txt  ez_random.h  ez_sqlite.h  ez_time.h  main.cpp
UNO to NodeMCU/HYBRID/: HYBRID.ino
UNO to NodeMCU/NODEMCU/: NODEMCU.ino
UNO to NodeMCU/UNO/: UNO.ino
UNO to NodeMCU/WIFI/: WIFI.ino
